[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "annemoia"
version = "0.1.0"
authors = [
  { name="StEugen" }
]
description = "DevSecOps CLI for automated code vulnerability scanning"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alfa",
  "Intended Audience :: DevSecOps",
  "Topic :: Security :: Vulnerability Scanner",
  "Programming Language :: Python :: 3"
]

[project.dependencies]
click = "^8.0"

